Updating with quoteRequest and response for better seperation of concerns